# slack-tools

./: .env.example  CLAUDE.md  pyproject.toml
docs/: PLAN.md  from-my-work-assistant.md
src/slack_tools/: __init__.py  actions.py  cli.py  client.py  queries.py
