[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-tools"
version = "0.1.0"
description = "Lightweight Slack CLI for AI agents and automation"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "python-dotenv>=1.0",
    "slack-sdk>=3.27",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
slack-tools = "slack_tools.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/slack_tools"]

[tool.ruff]
target-version = "py310"
line-length = 100
